deploy/console/010-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: drogue-ajour-console
  labels:
    app.kubernetes.io/name: drogue-ajour
    app.kubernetes.io/instance: ajour
    app.kubernetes.io/component: console
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: drogue-ajour
      app.kubernetes.io/instance: ajour
      app.kubernetes.io/component: console
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drogue-ajour
        app.kubernetes.io/instance: ajour
        app.kubernetes.io/component: console
    spec:
      containers:
        - name: app
          image: ghcr.io/drogue-iot/drogue-ajour-console:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /
          readinessProbe:
            httpGet:
              port: 8080
              path: /
