deploy/console/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  labels:
    app.kubernetes.io/name: drogue-ajour
    app.kubernetes.io/instance: ajour
    app.kubernetes.io/component: console
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drogue-ajour
      app.kubernetes.io/instance: ajour
      app.kubernetes.io/component: console
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drogue-ajour
        app.kubernetes.io/instance: ajour
        app.kubernetes.io/component: console 
    spec:
      serviceAccountName: builder
      containers:
      - name: server
        image: ghcr.io/drogue-iot/drogue-ajour-console:latest
        imagePullPolicy: Always
        ports:
        - name: endpoint
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /endpoints/backend.json
            port: 8080
        readinessProbe:
          httpGet:
            path: /endpoints/backend.json
            port: 8080
