deploy/console/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: console
  labels:
    app.kubernetes.io/name: drogue-ajour
    app.kubernetes.io/instance: ajour
    app.kubernetes.io/component: console
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: drogue-ajour
      app.kubernetes.io/instance: ajour
      app.kubernetes.io/component: console
  type: ClusterIP
  ports:
    - name: endpoint
      protocol: TCP
      port: 8080
      targetPort: endpoint
