deploy/console/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: console
  labels:
    app.kubernetes.io/name: drogue-ajour
    app.kubernetes.io/instance: ajour
    app.kubernetes.io/component: console
spec:
  to:
    kind: Service
    name: console
  port:
    targetPort: endpoint
  tls:
    termination: reencrypt
